# DRAGoN

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE_THIRD_PARTY  README.md  build.sh  clean.sh  main.nf  nextflow.config  nextflow_schema.json  nf-test.config  params.example.yml  partial_compile_report.py
.github/workflows/: docker-ci.yml  test-ci.yml
assets/: layout_384.csv  multiqc_config.yaml
conf/: igenomes_ignore.config  labels.config  modules.config  test.config
conf/conda/: drugseq-env.yml
md-templates/README/: 00-header.md  01-setup.md  02-profiles.md  03-usage.md  040-parameters.md  05-output.md  06-references.md
modules/local/bcl2fastq/: main.nf
modules/local/custom/count_unmapped_reads/: main.nf
modules/local/custom/deduplicate/: environment.yml  main.nf
modules/local/custom/demultiplex/: main.nf
modules/local/custom/downsample/: environment.yml  main.nf
modules/local/custom/merge_demux_json/: environment.yml  main.nf
modules/local/custom/merge_dragon/: main.nf
modules/local/custom/merge_solo/: main.nf
modules/local/custom/normalize_counts/: environment.yml  main.nf
modules/local/custom/parse_metadata/: environment.yml  main.nf
modules/local/custom/s3_archive_restore/: environment.yml  main.nf
modules/local/custom/stage_star_index/: main.nf
modules/local/fastqc/: main.nf
modules/local/multiqc/: main.nf
modules/local/pigz/: environment.yml  main.nf
modules/local/samtools/merge/: main.nf
modules/local/samtools/sort/: main.nf
modules/local/samtools/split/: main.nf
modules/local/samtools/stats/: main.nf
modules/local/star/align/: main.nf
modules/local/star/genomegenerate/: main.nf
modules/local/subread/featurecounts/: main.nf
src/deduplicate/: CMakeLists.txt  DedupStats.hpp  DeduplicateWorker.cpp  DeduplicateWorker.hpp  DuplicateDetector.cpp  DuplicateDetector.hpp  FilterKey.hpp  MultimapHandlers.hpp  SamReader.cpp  SamReader.hpp  main.cpp  test_main.cpp
src/demultiplex/: BarcodeMatcher.cpp  BarcodeMatcher.hpp  CMakeLists.txt  DemultiplexWorker.cpp  DemultiplexWorker.hpp  FastqReader.cpp  FastqReader.hpp  QCStats.cpp  QCStats.hpp  QualityFilter.cpp  QualityFilter.hpp  ReadPair.hpp  SeqToMask.hpp  main.cpp  test_main.cpp
src/libdrugseq/: CMakeLists.txt  Gtf.cpp  test_main.cpp
src/libdrugseq/include/: drugseq.hpp
src/libdrugseq/include/drugseq/: Gtf.hpp  LRUCache.hpp  Util.hpp  version.hpp
src/test-data/: .gitignore  Simulated_1_barcodes.txt  tmp1.bam  tmp1_MarkDups_ref.bam
src/test-data/DRAGoN.out.ref/: UniqueAndMult-EM.mtx  UniqueAndMult-PropUnique.mtx  UniqueAndMult-Rescue.mtx  UniqueAndMult-Uniform.mtx  barcodes.tsv  dedup_stats.tsv  matrix.mtx
subworkflows/local/DRAGoN/: main.nf
subworkflows/local/Decontaminate/: main.nf
subworkflows/local/NormalizeCounts/: main.nf
subworkflows/local/ParametersParse/: main.nf
subworkflows/local/ParametersParse/GatherGenomeFiles/: main.nf
subworkflows/local/ParametersParse/GatherInputFastq/: main.nf
subworkflows/local/Postprocessing/: main.nf
subworkflows/local/Preprocessing/: main.nf
subworkflows/local/STARsolo/: main.nf
subworkflows/local/util_drugseq/: main.nf
tests/data/bcl2fastq-in/: SampleSheet_Groups.csv
tests/data/input/: VH02001712_barcodes.txt  metadata.xlsx  metadata_duplicateSampleIDs.xlsx  plate_layout_novartis.csv
tests/python-unittest/: test_deduplicate.py  test_demultiplex.py
workflows/: DRAGoN.nf  STARsolo.nf
